# AgenticAIWokflow

./: .env  .gitignore  Experience Mobile Developer portfolio for fintech jobs with unique AI-focused projects.md  Experience Mobile Developer portfolio to get a job at a fintech company with a unique, simple, and AI-related project.md  Experience Mobile Developer strategy with AI hype for the future to getting a job.md  Mobile Developer strategy with AI hype for the future to getting a job.md  bullet_points.md  company.md  company.txt  dummy-data.json  dummy-json2.json  main.py  pyproject.toml
modules/01_cot/: main.py  utils.py
modules/01_cot/tools/: broadcast.py  internet_search.py  research_agreator.py  research_plan.py  translate.py
modules/03_basic_agent/: main.py
modules/04_ocr/: main.py
modules/05_vector_query/: main.py
